@@ -1,5 +1,8 @@
 2002-05-01  Matthias Clasen  <maclas@gmx.de>
 
+	* tools/docpercentages.pl: Add the script which Owen uses for the 
+	d.g.o online API docs. Its easier to keep in sync here.
+
 	* gtkdoc-mkdb.in (OutputMissingDocumentation): Fix
 	$MODULE-undocumented.txt for d.g.o online API docs.
 	
